# svarog

./: .gitignore  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  libsvarog.pc.in
dox/: Makefile.am  Makefile.in  building_dorban_from_source.dox  building_svarog_from_source.dox  dorban.dox  downloading_dorban_tarball.dox  downloading_svarog_source.dox  how_to_use_svarog.dox  running_dorban.dox  using_svarog_as_a_library.dox  using_svarog_from_command_line.dox  using_the_demo.dox
etc/: Makefile.am  Makefile.in  svarog.ini
examples/: Makefile.am  Makefile.in  example10_precalculated4.svarog  example11_perkun.svarog  example12_states.svarog  example13_test_with_query.svarog  example14_test.svarog  example15_precalculated4_with_bases.svarog  example1_dorban.svarog  example1_dorban_input1.txt  example1_dorban_input2.txt  example1_dorban_input3.txt  example2_single_problem.svarog  example3_dorban.svarog  example3_dorban_input1.txt  example3_dorban_input2.txt  example4_precalculate.svarog  example5_estimate.svarog  example6_precalculated.svarog  example7_to_be_merged_alpha,svarog  example8_to_be_merged_beta,svarog  example9_precalculate_with_query.svarog
inc/: Makefile.am  Makefile.in  svarog.h  svarog_daemon.h
perl/: Makefile.am  Makefile.in  svarog_generate_control_shell.pl  svarog_generate_merge_shell.pl  svarog_generate_precalculate_shell.pl  svarog_generate_precalculate_tasks.pl
src/: Makefile.am  Makefile.in  action.cc  belief.cc  clause_illegal.cc  clause_requires.cc  collection_of_actions.cc  collection_of_functions.cc  collection_of_values.cc  collection_of_variables.cc  collection_of_visible_states.cc  command_action.cc  command_belief.cc  command_cout_estimate_beliefs.cc  command_cout_knowledge.cc  command_cout_perkun.cc  command_cout_precalculate.cc  command_cout_result.cc  command_cout_states.cc  command_cout_visible_states.cc  command_input.cc  command_loop.cc  command_solve.cc  command_test.cc  command_test_with_query.cc  configuration.cc  configuration_parser.cc  configuration_scanner.l  cpp_parser.cc  daemon.cc  dummy_client.cc  expression_function_call.cc  expression_initial_variable_value.cc  expression_terminal_variable_value.cc  expression_value.cc  function.cc  knowledge_action.cc  knowledge_case.cc  knowledge_impossible.cc  knowledge_payoff.cc  (+24 more)
